<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.MainActivity">
    <item
        android:id="@+id/action_recommend"
        android:checked="true"
        android:icon="@drawable/ic_loyalty_white_24dp"
        android:title="@string/action_recommend" />
    <item
        android:id="@+id/action_micro_video"
        android:icon="@drawable/ic_video_white_24dp"
        android:title="@string/action_micro_video" />
    <item
        android:id="@+id/action_website"
        android:icon="@drawable/ic_browser_white_24dp"
        android:title="@string/action_browser" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/action_account" />
</menu>