<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffe9eff2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/share_with"
        android:textColor="#ff666666"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rl_share_we_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/share_we_chat"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:text="@string/we_chat"
            android:textColor="#ff666666"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/rl_share_moment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/share_moment"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:text="@string/moments"
            android:textColor="#ff666666"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/rl_share_wei_bo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/share_wei_bo"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:text="@string/wei_bo"
            android:textColor="#ff666666"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/rl_share_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/share_qq"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:text="@string/qq"
            android:textColor="#ff666666"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/rl_share_qq_zone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/share_qq_zone"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:text="@string/qq_zone"
            android:textColor="#ff666666"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>