<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sort_type" />

    <org.apmem.tools.layouts.FlowLayout
        android:id="@+id/fl_sort_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

    </org.apmem.tools.layouts.FlowLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sort_direction" />

    <RadioGroup
        android:id="@+id/rg_sort_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_sort_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc" />

        <RadioButton
            android:id="@+id/rb_sort_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asc" />
    </RadioGroup>
</LinearLayout>