<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl_go_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground">

            <TextView
                android:id="@+id/tv_go_favorite"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawablePadding="24dp"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/action_favorite"
                android:textColor="?android:textColorPrimary" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_go_watch_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground">

            <TextView
                android:id="@+id/tv_go_watch_history"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawablePadding="24dp"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/action_watch_history"
                android:textColor="?android:textColorPrimary" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_go_video_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground">

            <TextView
                android:id="@+id/tv_go_video_library"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawablePadding="24dp"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/action_video_library"
                android:textColor="?android:textColorPrimary" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_go_downloads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground">

            <TextView
                android:id="@+id/tv_go_downloads"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawablePadding="24dp"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/action_downloads"
                android:textColor="?android:textColorPrimary" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff0f0f0" />

        <FrameLayout
            android:id="@+id/fl_go_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground">

            <TextView
                android:id="@+id/tv_go_share"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawablePadding="24dp"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/action_share"
                android:textColor="?android:textColorPrimary" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_go_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground">

            <TextView
                android:id="@+id/tv_go_settings"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawablePadding="24dp"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/action_settings"
                android:textColor="?android:textColorPrimary" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>